--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,7 +1,33 @@
+/*used to show book images*/
 .hidden {
   visibility: hidden;
 }
 
+.main-title {
+  font-family: 'Helvetica Neue', sans-serif;
+  font-size: 100px;
+  font-weight: bold;
+  margin-bottom: 30px;
+}
+
 .book-covers {
-  
+  border: 10px solid black;
+}
+
+div .search-area {
+  background: linear-gradient( rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.3) ), url('https://upload.wikimedia.org/wikipedia/commons/2/2b/Bookshelf.jpg');
+  background-size: cover;
+  height: 250px;
+  padding-top: 25px;
+}
+
+.label-name {
+  font-family: 'Helvetica Neue', sans-serif;
+  font-size: 20px;
+  color: #FFF;
+  margin-top: 15px;
+}
+
+.upload-button {
+  margin-top: 10px;
 }
